# camera-conventions

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  readme.md
assets/cameras/: nersem_cam.json  nersem_cam_blender.json  robCam.txt  robCam_blender.json  testCam.json  testCam.txt  testCam_blender.json  testCam_nersemble.json
assets/geometries/: pyramid.json  pyramid_blender.json  pyramid_nersemble.json
assets/scenes/: pyramid.json
assets/shaders/: camView.frag  camView.vert
blender/: pyramid.blend  rob_view.blend
conventions/: Blender.toml  OpenCV.ini  OpenGL.toml  OpenGL_c2w.ini  alicevision.ini  nersemble.ini
cpp/: GLProgram.h  camViewer.cpp  readCamera.cpp  readCamera.h  readGeometry.cpp  readGeometry.h
python/: bpyCreateCamera.py  bpyReadCamera.py  bpyReadMesh.py  cv_view.py  prepare_rob_ner.py  pyproject.toml  readfile.ipynb
python/camera_conventions/: __init__.py  camera.py  geometry.py  parser.py
src/: GLProgram.cpp  GLStructures.cpp  GLStructures.h  GLViewer.cpp  camViewer.cpp  readCamera.cpp
